# tamagotchi

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  USAGE_EXAMPLE.md  main.py  pyproject.toml
backend/core/: config.py  logging.py  twitter_models.py
backend/core/api/: ingestion.py  push_code.py  routers.py  session.py  transcribe.py
backend/core/clients/: github_client.py  storage.py
backend/core/prompts/: teardown.yaml
backend/core/sockets/: __init__.py  base.py  chat.py  chat_v2.py  chat_with_knowledge.py  claude.py  claude_sdk_actor.py  code.py  commit.py  emitters.py  envelope_type.py  file_streamer.py  handlers.py  openai_streamer.py  setup.py  streamer.py  types.py  writer.py
backend/core/sockets/actors/: __init__.py  assistant.py  base.py  claude_sdk.py
backend/core/sockets/types/: __init__.py  envelope.py
backend/core/sockets/utils/: __init__.py  streamer.py
backend/core/storage/: google.py
backend/core/teardown/: __init__.py  abstract_storage_adaptor.py  git_repo_processor.py  google_storage_adaptor.py  local_storage_client.py  repo_processor.py  storage_adaptor.py  types.py
backend/infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
backend/scripts/: docker.sh
extension/: .gitignore  CLAUDE.md  clarifying-questions.md  future_improvements.md  manifest.config.ts  package.json
extension/src/background/: main.ts
extension/src/config/: api.ts  twitter.ts
extension/src/content/: main.tsx  twitterThread.ts
extension/src/sidepanel/: App.css  App.tsx
extension/src/types/: api.ts  messages.ts  twitter.ts
frontend/: .env  .gitignore  CLAUDE.md  clarifying_questions.md  index.html  package.json  tsconfig.app.json
frontend/public/: AppContext.tsx  package.json  schema.json  ui-components.txt
frontend/src/: AllApps.tsx  App.tsx  analyzer.ts  constants.ts  index.css  main.tsx  media.ts  router.tsx  routes.tsx  vite-env.d.ts
frontend/src/audio/: init.ts
frontend/src/components/: AnalysisErrorDialog.tsx  AppHeader.tsx  AudioWaveform.tsx  GenerativeArea.tsx  GitHubUrlInput.tsx  HumanArea.tsx  MarkdownRenderer.tsx  MessageInput.tsx  MobileAnalysisView.tsx  MobileViewSwitcher.tsx  NewAnalysisDialog.tsx  README.md  RepositoryGrid.tsx  RepositoryInput.tsx  RepositoryMetadata.tsx  ThreeJsVisualization.tsx  ThreeJsVisualizationExamples.tsx  ValidationBadges.tsx
frontend/src/context/: AppContext.tsx  AppContextOld.tsx
frontend/src/data/: hardcodedRepos.ts
scripts/: get_git_diff_for_automated_commit_message.sh  update_public.sh
(+50 files in other folders)
